@@ -1,3 +1,5 @@
+- Improvement: Improved performance checking access with PermissionService
+
 32.7.1 (08-02-2021)
 - Bug fix: Fixed performance issue validation object access with PermissionService
 
